# SobelWithCuda

./: CMakeLists.txt  README.md
src/: conv2d.cu  main.cpp
